# Machine_Learning_Notes

./: 0) Machine_Learning_Theory.ipynb  1) Linear_Regression_core_logics.ipynb  1) Performance_metrics.ipynb  10) K means clustering.ipynb  11) Decision_trees.ipynb  15) Emsemble Techniques.ipynb  16) Clustering_evaluation.ipynb  16) Gradient Bossting.ipynb  2) Linear_Regression_Theory&GD.ipynb  2) Linear_Regression_on_dataset.ipynb  2) Performance_metrics.ipynb  2.1) Linear_Regression_Theory&GD.ipynb  3) Prebuilt_LinearRegression_model_usage.ipynb  4) Logistic Regression.ipynb  5) ROC_AUC.ipynb  6) KNN.ipynb  7) cross validation.ipynb  8) SVM.ipynb  9) Naive Bayes.ipynb  Linear_Regression.ipynb  Linear_Regression_manual.ipynb  ML_Project_1.ipynb  Machine Learning_1.ipynb  Machine_Learning_2.ipynb  Machine_Learning_Theory.ipynb  PERFORMANCE METRICS.IPYNB  final_sgd_reg_model.joblib  pyproject.toml  requirements.txt
